created individuals.csv with clinical info and aggregated features

--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -240,6 +240,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write `data` to a CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('/home/attila/projects/bsm/results/2020-08-19-indiv-based-analysis/individuals.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1483,9 +1499,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 43059,\n",
+      "  \"iopub_port\": 49745,\n",
+      "  \"stdin_port\": 57967,\n",
+      "  \"control_port\": 41013,\n",
+      "  \"hb_port\": 37155,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"c0963b60-2df071f1785e6eb059ac9cac\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-a7eb155c-9092-418f-a82d-e3664d00256f.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
    "source": [
     "%connect_info"
    ]
