insert the new columns after the expanded column rather than append to the end

--- a/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
+++ b/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,45 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = SNPnexus.read_annot()"
+    "annot = SNPnexus.read_annot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 49039,\n",
-      "  \"iopub_port\": 45481,\n",
-      "  \"stdin_port\": 55343,\n",
-      "  \"control_port\": 49771,\n",
-      "  \"hb_port\": 36877,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"b49ab26c-b9df0ad8d2aa089c61a44b15\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-b371baaa-ab45-42a9-bf03-8a5786a83034.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "colnamel = ['near_gens_Type', 'near_gens_Annotation', 'ensembl_Predicted Function', 'sift_Prediction']\n",
+    "nonestrl = ['None', 'None', 'other', 'other']\n",
+    "data = SNPnexus.expand_multiple_setvalued(annot, colnamel=colnamel, nonestrl=nonestrl)\n",
+    "data.to_csv('/home/attila/projects/bsm/results/2020-11-13-functional-variants/expanded-annotated-calls.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
