filtering for functional categories

--- a/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
+++ b/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
@@ -19,6 +19,7 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "import attila_utils\n",
+    "import funcvar\n",
     "from bsmcalls import SNPnexus\n",
     "%matplotlib inline"
    ]
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +46,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filterings\n",
+    "\n",
+    "Let's shorten the name of `data` to `D`!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "D = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Dx</th>\n",
+       "      <th>Control</th>\n",
+       "      <th>SCZ</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>coding nonsyn</th>\n",
+       "      <td>15</td>\n",
+       "      <td>44</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stop-gain</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>intronic (splice_site)</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tfbs_TFBS Name_bin</th>\n",
+       "      <td>22</td>\n",
+       "      <td>79</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Dx                      Control  SCZ  Total\n",
+       "coding nonsyn                15   44     59\n",
+       "stop-gain                     0    4      4\n",
+       "intronic (splice_site)        0    1      1\n",
+       "tfbs_TFBS Name_bin           22   79    101"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtl = ['coding nonsyn', 'stop-gain', 'intronic (splice_site)', 'tfbs_TFBS Name_bin']\n",
+    "funcvar.filtered_Dx_counts(D, filtl=filtl, gb='Dx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functional variants\n",
+    "\n",
+    "First let's see Taejeong's definition of functional variants\n",
+    "\n",
+    "> The terms that we chose as functional are missense, stop_gained, splice_region, regulatory, and TF_binding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Individual ID  Tissue   CHROM  POS        Mutation\n",
+       "CMC_MSSM_027   NeuN_pl  4      147398434  T/C             SCZ\n",
+       "                        8      86358470   G/C             SCZ\n",
+       "                        10     102586147  G/A             SCZ\n",
+       "                        11     22272365   A/T             SCZ\n",
+       "                        15     42362241   C/T             SCZ\n",
+       "                                                       ...   \n",
+       "CMC_PITT_072   NeuN_pl  8      98130865   G/A             SCZ\n",
+       "CMC_PITT_098   NeuN_pl  13     73868238   C/T         Control\n",
+       "                        19     7621797    G/A         Control\n",
+       "CMC_PITT_118   NeuN_pl  2      29124973   T/G             SCZ\n",
+       "CMC_MSSM_304   muscle   18     7234373    C/T             SCZ\n",
+       "Name: Dx, Length: 143, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.loc[D['coding nonsyn'] | D['stop-gain'] | D['intronic (splice_site)'] | D['tfbs_TFBS Name_bin'],'Dx']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 49039,\n",
+      "  \"iopub_port\": 45481,\n",
+      "  \"stdin_port\": 55343,\n",
+      "  \"control_port\": 49771,\n",
+      "  \"hb_port\": 36877,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"b49ab26c-b9df0ad8d2aa089c61a44b15\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-b371baaa-ab45-42a9-bf03-8a5786a83034.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
    "source": [
     "%connect_info"
    ]
