Python set valued gene sets

--- a/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
+++ b/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
@@ -25,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -59,6 +66,31 @@
    "outputs": [],
    "source": [
     "D = data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further preparations\n",
+    "### Overlapped gene set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_geneset(df, col='near_gens_Overlapped Gene', sepstr=':', nonestr='None'):\n",
+    "    loc = list(df.columns).index(col) + 1\n",
+    "    value = SNPnexus.str2set_setvalued(df, col, nonestr, sepstr, listval=False)\n",
+    "    column = col + ' set'\n",
+    "    if not column in df.columns:\n",
+    "        df.insert(loc=loc, column=column, value=value)\n",
+    "    return(None)\n",
+    "\n",
+    "insert_geneset(D, col='near_gens_Overlapped Gene', sepstr=':', nonestr='None')"
    ]
   },
   {
@@ -205,18 +237,6 @@
        "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>gerp_Element RS Score_bin</th>\n",
-       "      <td>75</td>\n",
-       "      <td>265</td>\n",
-       "      <td>340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>regbuild_Epigenome_nervoussys_bin</th>\n",
-       "      <td>208</td>\n",
-       "      <td>521</td>\n",
-       "      <td>729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Deleterious</th>\n",
        "      <td>6</td>\n",
        "      <td>14</td>\n",
@@ -228,20 +248,39 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>deepsea_Functional Significance Score &gt;= 0.6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gerp_Element RS Score_bin</th>\n",
+       "      <td>75</td>\n",
+       "      <td>265</td>\n",
+       "      <td>340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>regbuild_Epigenome_nervoussys_bin</th>\n",
+       "      <td>208</td>\n",
+       "      <td>521</td>\n",
+       "      <td>729</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Dx                                 Control  SCZ  Total\n",
-       "coding nonsyn                           15   44     59\n",
-       "stop-gain                                0    4      4\n",
-       "intronic (splice_site)                   0    1      1\n",
-       "tfbs_TFBS Name_bin                      22   79    101\n",
-       "gerp_Element RS Score_bin               75  265    340\n",
-       "regbuild_Epigenome_nervoussys_bin      208  521    729\n",
-       "Deleterious                              6   14     20\n",
-       "Deleterious - Low Confidence             1    3      4"
+       "Dx                                            Control  SCZ  Total\n",
+       "coding nonsyn                                      15   44     59\n",
+       "stop-gain                                           0    4      4\n",
+       "intronic (splice_site)                              0    1      1\n",
+       "tfbs_TFBS Name_bin                                 22   79    101\n",
+       "Deleterious                                         6   14     20\n",
+       "Deleterious - Low Confidence                        1    3      4\n",
+       "deepsea_Functional Significance Score >= 0.6        3   12     15\n",
+       "gerp_Element RS Score_bin                          75  265    340\n",
+       "regbuild_Epigenome_nervoussys_bin                 208  521    729"
       ]
      },
      "execution_count": 7,
@@ -250,7 +289,7 @@
     }
    ],
    "source": [
-    "filtl = ['coding nonsyn', 'stop-gain', 'intronic (splice_site)', 'tfbs_TFBS Name_bin', 'gerp_Element RS Score_bin', 'regbuild_Epigenome_nervoussys_bin', 'Deleterious', 'Deleterious - Low Confidence']\n",
+    "filtl = ['coding nonsyn', 'stop-gain', 'intronic (splice_site)', 'tfbs_TFBS Name_bin', 'Deleterious', 'Deleterious - Low Confidence', 'deepsea_Functional Significance Score >= 0.6', 'gerp_Element RS Score_bin', 'regbuild_Epigenome_nervoussys_bin']\n",
     "funcvar.filtered_Dx_counts(D, filtl=filtl, gb='Dx')"
    ]
   },
@@ -267,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +617,7 @@
        "CMC_PITT_052  NeuN_pl 1     167358841 G/A                          other  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
