Before annotating Walsh data

--- a/presentations/2020-12-06-cdrb-wip/2020-12-06-cdrb-wip.tex
+++ b/presentations/2020-12-06-cdrb-wip/2020-12-06-cdrb-wip.tex
@@ -37,7 +37,7 @@
 \title{Somatic SNVs from WGS data in Schizophrenic Brains}
 %\subtitle{A subtitle may be shorter and more technical}
 \author{Attila Jones, Chaggai Rosenbluh, Andy Chess}
-\date{Mount Sinai School of Medicine}
+\date{Brain Somatic Mosaicism Network}
 
 \begin{document}
 
@@ -259,6 +259,12 @@ real data, ``unlabeled'' variants
 
 \begin{frame}{Genomic annotations}
 
+\end{frame}
+
+\begin{frame}
+\includegraphics[height=0.7\textheight]{from-others/polygenic-to-omnigenic-fig4a.jpg}
+
+{\tiny Boyle et al 2017 Cell}
 \end{frame}
 
 \end{document}
