converting genomic_subject into clinical standard

--- a/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
+++ b/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
@@ -16,6 +16,7 @@
     "* gene sets\n",
     "    * neurodevelopmental read about synaptic maturation and SCZ aetiology\n",
     "    * CNVs rare and de novo small variants in SCZ\n",
+    "    * genes expressed in the DLPFC: CMC data set?\n",
     "* related phenotypes\n",
     "    * ASD: include also ASD cases from Walsh lab data?\n",
     "    * Bipolar disorder: the most shared heritability with SCZ but no somatic variant data set\n",
