number of calls: Chess vs Walsh data

--- a/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
+++ b/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
@@ -17,6 +17,7 @@
     "    * neurodevelopmental read about synaptic maturation and SCZ aetiology\n",
     "    * CNVs rare and de novo small variants in SCZ\n",
     "    * genes expressed in the DLPFC: CMC data set?\n",
+    "    * for a lot of gene sets see the supplementary materials in [The contribution of rare variants to risk of schizophrenia in individuals with and without intellectual disability](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5533219/)\n",
     "* related phenotypes\n",
     "    * ASD: include also ASD cases from Walsh lab data?\n",
     "    * Bipolar disorder: the most shared heritability with SCZ but no somatic variant data set\n",
@@ -36,7 +37,10 @@
     "    * adult and *embryonic*\n",
     "    brain specific regulatory elements\n",
     "    * immune system (what are the relevant cell types in synaptic pruning?)\n",
-    "    * expressed genes in the brain (general and brain-specific): CMC or GTEx see [omnigenic paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5536862)"
+    "    * expressed genes in the brain (general and brain-specific): CMC or GTEx see [omnigenic paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5536862)\n",
+    "* allele frequency (AF)\n",
+    "    * characterization\n",
+    "    * use it as weight on functional variants"
    ]
   },
   {
