call set for genic recurrence: standard instead of expanded

--- a/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
+++ b/notebook/2020-12-08-ideas/2020-12-08-ideas.ipynb
@@ -44,6 +44,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ideas for statistical modeling\n",
+    "\n",
+    "Informally speaking we want to find differential mutation patterns that distinguish SCZ from Control individuals.  These differential mutation patterns will localize to genetic elements related to the patho-mechanism of schizophrenia.  In othwer words, the set of genetic elements related to schizophrenia is expected to display differential mutation patterns comparing Control to SCZ.  In contrast, elements unrelated to schizophrenia are expected to display similar mutation patterns in Control and SCZ individuals.\n",
+    "\n",
+    "### Logistic regression\n",
+    "\n",
+    "See the [globaltest](https://academic.oup.com/bioinformatics/article/20/1/93/229017) method for gene expression data.\n",
+    "\n",
+    "We might model the effect of mutations with multiple logistic regression\n",
+    "$$\n",
+    "\\mathrm{E}[\\mathrm{Dx}] = h^{-1}(\\beta X) \\\\\n",
+    "\\beta = (\\beta_{g_1}, ..., \\beta_{g_m})\n",
+    "$$\n",
+    "where we have $m$ genes in total.\n",
+    "\n",
+    "Let $G$ be a gene set (e.g from the GO or KEGG database) and $\\bar{G}$ its complementary set such that $G \\cup \\bar{G} = \\{g_1, ... g_m\\}$. Then the null hypothesis might be that ge\n",
+    "\n",
+    "\n",
+    "[Bayesian logistic regression](https://bayesball.github.io/BOOK/bayesian-multiple-regression-and-logistic-models.html#bayesian-logistic-regression) has the advantage that it allows mutations to have variable effect size within some gene set; and, naturally, it also allows similar variability in the complementer gene set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
