--- a/notebook/2020-12-09-walsh-data/2020-12-09-walsh-data.ipynb
+++ b/notebook/2020-12-09-walsh-data/2020-12-09-walsh-data.ipynb
@@ -61,6 +61,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_margins(df):\n",
+    "    df = df.copy()\n",
+    "    df = pd.concat([df, df.sum(axis=1)], axis=1)\n",
+    "    df = pd.concat([df, pd.DataFrame(df.sum(axis=0)).T], axis=0)\n",
+    "    df = df.rename({0: 'Sum'}, axis=0).rename({0: 'Sum'}, axis=1)\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concat_counts(c, w):\n",
+    "    c = c.rename({'SCZ': 'Case'}, axis=1).loc[['NeuN_pl']].rename({'NeuN_pl': 'Chess'}, axis=0)\n",
+    "    w = w.rename({'ASD': 'Case'}, axis=1).rename({'frontal cortex': 'Walsh'}, axis=0)\n",
+    "    counts = pd.concat([c, w])\n",
+    "    return(counts)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +106,7 @@
        " 'named-figure/ncalls-chess-walsh-barplot.pdf']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,6 +138,215 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Dx</th>\n",
+       "      <th>Control</th>\n",
+       "      <th>SCZ</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tissue</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NeuN_mn</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NeuN_pl</th>\n",
+       "      <td>895</td>\n",
+       "      <td>2488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>muscle</th>\n",
+       "      <td>6</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Dx       Control   SCZ\n",
+       "Tissue                \n",
+       "NeuN_mn        0     1\n",
+       "NeuN_pl      895  2488\n",
+       "muscle         6    21"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Dx</th>\n",
+       "      <th>ASD</th>\n",
+       "      <th>Control</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tissue</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>frontal cortex</th>\n",
+       "      <td>2285</td>\n",
+       "      <td>758</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Dx               ASD  Control\n",
+       "Tissue                       \n",
+       "frontal cortex  2285      758"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.unstack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Put results together: use only NeuN_pl calls from the Chess data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Control</th>\n",
+       "      <th>Case</th>\n",
+       "      <th>Sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Chess</th>\n",
+       "      <td>895</td>\n",
+       "      <td>2488</td>\n",
+       "      <td>3383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Walsh</th>\n",
+       "      <td>758</td>\n",
+       "      <td>2285</td>\n",
+       "      <td>3043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sum</th>\n",
+       "      <td>1653</td>\n",
+       "      <td>4773</td>\n",
+       "      <td>6426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Control  Case   Sum\n",
+       "Chess      895  2488  3383\n",
+       "Walsh      758  2285  3043\n",
+       "Sum       1653  4773  6426"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_margins(concat_counts(c.unstack(), w.unstack()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +365,7 @@
        " 'named-figure/nsamples-chess-walsh-barplot.pdf']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -149,7 +385,7 @@
    "source": [
     "def get_nsamples(df):\n",
     "    d = {name: len(group.index.get_level_values('Individual ID').unique()) for name, group in df.groupby(['Tissue', 'Dx'])}\n",
-    "    val = pd.Series(d).unstack().fillna(0)\n",
+    "    val = pd.Series(d).unstack().fillna(0).astype('int64')\n",
     "    return(val)\n",
     "\n",
     "def get_nsamples2(df):\n",
@@ -158,7 +394,7 @@
     "    df['Ind ID'] = df.index.get_level_values('Individual ID')\n",
     "    val = df.pivot_table(values='Ind ID', columns='Dx', index='Tissue', aggfunc='nunique')\n",
     "    #val = df.pivot_table(values='Ind ID', columns='Dx', index='Tissue', aggfunc=lambda x: len(pd.unique(x)))\n",
-    "    val = val.fillna(0)\n",
+    "    val = val.fillna(0).astype('int64')\n",
     "    return(val)\n",
     "                         \n",
     "\n",
@@ -174,6 +410,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Control</th>\n",
+       "      <th>Case</th>\n",
+       "      <th>Sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Chess</th>\n",
+       "      <td>25</td>\n",
+       "      <td>61</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Walsh</th>\n",
+       "      <td>15</td>\n",
+       "      <td>57</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sum</th>\n",
+       "      <td>40</td>\n",
+       "      <td>118</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Control  Case  Sum\n",
+       "Chess       25    61   86\n",
+       "Walsh       15    57   72\n",
+       "Sum         40   118  158"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_margins(concat_counts(c=get_nsamples(chess), w=get_nsamples(walsh)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +516,7 @@
        "Text(0.5, 0, '# calls per sample')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +556,7 @@
        " 'named-figure/ncalls-chess-walsh-hist.pdf']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +599,7 @@
        " 'named-figure/ncalls-depth-chess-walsh.pdf']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -325,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +639,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 56639,\n",
-      "  \"iopub_port\": 51783,\n",
-      "  \"stdin_port\": 34003,\n",
-      "  \"control_port\": 51563,\n",
-      "  \"hb_port\": 39779,\n",
+      "  \"shell_port\": 52871,\n",
+      "  \"iopub_port\": 49383,\n",
+      "  \"stdin_port\": 53513,\n",
+      "  \"control_port\": 43535,\n",
+      "  \"hb_port\": 59681,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"bc6f9889-aff6e530b392d05b3b70622d\",\n",
+      "  \"key\": \"5b359368-f0914c1688e7ae897a16ad15\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -348,7 +654,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-08a094c4-989c-4623-a72b-81b75585247e.json\n",
+      "    $> jupyter <app> --existing kernel-f2387dcc-e53c-4e7b-94a5-e1d3fb92c2f8.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
